# Sequenzo

./: .gitignore  .gitmodules  MANIFEST.in  README.md  __init__.py  pyproject.toml  requirements-3.10.txt  requirements-3.11.txt  requirements-3.8.txt  requirements-3.9.txt  requirements.txt  results_sqz.csv  setup.py
.github/workflows/: python-app.yml  python-test.yml
Tutorials/: 01_quickstart.ipynb  test.ipynb
Tutorials/cluster_analysis/: pairfam_clustering_tutorial.ipynb  test_sequences_to_variables.py  test_studer_2018_workflow.py  ward_methods_demo.py
Tutorials/compare_differences/: compare_differences_lsog.ipynb  compare_differences_traminer.qmd
Tutorials/dissimilarity_measures/: dissimilarity_measures.ipynb
Tutorials/event_sequences/: event_sequences_visual_comparison_sequenzo.ipynb  event_sequences_visual_comparison_traminer.qmd
Tutorials/feature_extraction_and_selection/: clustassoc_typology_validation_tutorial.py  fes_unterlerchner2023_preset.ipynb
Tutorials/local_global_quintiles/: comparison_local_global_quintiles.ipynb  local_deciles.ipynb
Tutorials/multidomain_sequence_analysis/: main_tutorial.ipynb  md_clara_pairfam_strategies.ipynb  md_clara_pairfam_tutorial.ipynb  md_clara_patent_cities_strategies.ipynb  md_clara_patent_cities_tutorial.ipynb
Tutorials/seqhmm/: biofam_mhmm_tutorial.ipynb  mvad_hmm_tutorial.ipynb  mvad_hmm_tutorial.qmd  pairfam_activity_nhmm_tutorial.ipynb  pairfam_hmm_tutorial.ipynb
Tutorials/sequence_characteristics/: sequence_characteristics_lsog.ipynb  sequence_characteristics_traminer.qmd
Tutorials/tree_analysis/: FIX_NBFORMAT.md  README.md  RENDER_INSTRUCTIONS.md  render.sh  render_with_graphviz.sh  tree_analysis_lsog.dot  tree_analysis_lsog.html  tree_analysis_lsog.ipynb  tree_analysis_lsog.qmd  tree_analysis_lsog_disstree.dot  tree_analysis_lsog_seqtree.dot
Tutorials/weighted_data/: mvad.ipynb  pairfam_family.ipynb
Tutorials/with_event_history_analysis/: event_sequence_analysis_lsog.ipynb  event_sequence_analysis_traminer.html  event_sequence_analysis_traminer.qmd  pairfam_family.ipynb
developer/: CLUSTERING_WEIGHTEDCLUSTER_VS_SEQUENZO.md  NORM_GUIDE.md  SEQUENZO_HELSKE_IMPLEMENTATION_REQUIREMENTS.md  SEQUENZO_VS_TRAMINER_COMPARISON.md
developer/TraMineR-master/: DESCRIPTION  MD5  NEWS
developer/WeightedCluster-master/: NAMESPACE  NEWS
developer/important-literature/: 2018-sequence-history-analysis.md  2018-studer-property-based-fuzzy-clustering.md  2021-comparing-groups.md  2024-helske.md  2026-ritschard-liao-assessing-the-impact-of-timing-errors-in-sequence-analysis.md  sequence analysis and feature extraction.md
docs/multidomain/: cat-clara.md  dat-clara.md  idcd-clara.md  md-clara-guidelines.md  md-clara.md
maintenance_scripts/: build_macos_ci_libomp.sh  repair_macos_wheel.py  repair_windows_wheel.py
original_datasets_and_cleaning/: examples_for_documents.ipynb  examples_output_display_for_documents.ipynb  get_distance_matrix_example_for_handling_outputs_too_large_for_docs.ipynb
original_datasets_and_cleaning/stress/: cleaning_report.csv  stress_sequence_long.csv
original_datasets_and_cleaning/xinyi_test/: 01_quickstart.ipynb  02_quickstart.ipynb  mvad.ipynb  runtime_test.ipynb  test_clara_xingyun.py  xinyi_test_dissmilarity_measures.py
python_source_code/: pyproject.toml  seqdef.py  setup.py
python_source_code/sequenzo/visualization/: __init__.py  plot_mean_time.py  plot_most_frequent_sequences.py  plot_relative_frequency.py  plot_single_medoid.py  plot_transition_rate_matrix.py
requirements/: requirements-3.10.txt  requirements-3.11.txt  requirements-3.12.txt  requirements-3.13.txt  requirements-3.14.txt  requirements-3.9.txt
sequenzo/: __init__.py  define_sequence_data.py  openmp_setup.py  representative_sequences.py  seqdef.py  sequence_index_plots.py  version_check.py
sequenzo/clustering/: KMedoids.py  README.md  __init__.py  compare_cluster_methods.py  hierarchical_clustering.py  k_medoids.py  k_medoids_range.py  seqs2vars_utils.py  sequences_to_variables.py
sequenzo/compare_differences/: README.md  __init__.py  kob_decomposition.py  seqcompare.py  seqdiff.py
sequenzo/datasets/: __init__.py  actcal.csv  actcal_tse.csv  chinese_colonial_territories.csv  country_CO2_emissions.csv  country_child_mortality_global_deciles.csv  country_income.csv  country_life_expectancy.csv  country_life_expectancy_global_deciles.csv  global_south_patent_sequence_3y.csv  global_south_patent_sequence_network_3y.csv  pairfam_activity.csv  pairfam_family_by_month.csv  students_stress_states_by_week.csv
sequenzo/decomposition/: README.md  __init__.py  kob.py  oaxaca.py  results.py  sa_kob.py
sequenzo/discrepancy_analysis/: README.md  __init__.py  core.py  disstree.py  permutation.py  positionwise.py  seqdiff.py  seqtree.py  tree.py  tree_helpers.py  tree_utils.py  tree_visualization.py
sequenzo/dissimilarity_measures/: __init__.py  c_code.cp38-win_amd64.pyd  c_code.cp39-win_amd64.pyd  example.cp38-win_amd64.pyd  get_distance_matrix.py  get_substitution_cost_matrix.py  seqdef.py  st.py
sequenzo/emlt/: README.md  __init__.py  results.py  seqemlt.py
sequenzo/event_sequences/: README.md  __init__.py  core.py  visualization.py
sequenzo/feature_extraction_and_selection/: README.md  __init__.py  boruta_feature_selection.py  clustassoc_typology_validation.py  duration_timing_feature_builders.py  feature_extraction.py  feature_extraction_and_selection_pipeline.py  interpretation.py  monthly_state_to_spells.py  selection.py  sequencing_feature_builders.py  time_binning_utils.py
sequenzo/group_comparison/: README.md  __init__.py  bic_lrt.py  group_differences.py  kob_decomposition.py  positionwise.py  seqcompare.py  seqdiff.py
sequenzo/hierarchical/: README.md  __init__.py  compression.py  data.py  distances.py  results.py  (+4 more)
tests/: README.md  test_build_release_boundaries.py  test_computer_performance.py  test_feature_extraction_and_selection_module.py  test_pam_and_kmedoids.py  test_public_import_contract.py  test_quickstart_integration.py  test_sequence_data_void.py  test_sequences_to_variables.py
(+888 files in other folders)
