[build-system]
requires = [
    "setuptools>=64",
    "wheel>=0.40.0",
    "pybind11>=2.10.0",
    "numpy>=1.19.5",
    "setuptools-scm[toml]>=7.0.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "sequenzo"
version = "0.1.0"
description = "A fast, scalable and intuitive Python package for social sequence analysis."
readme = "README.md"
authors = [
    { name = "Yuqi Liang", email = "yuqi.liang.1900@gmail.com" },
    { name = "Xinyi Li", email = "1836724126@qq.com"},
    { name = "Jan Heinrich Ernst Meyerhoff-Liang", email = "jan.meyerhoff1@gmail.com"}
]
license = { file = "LICENSE" }
requires-python = ">=3.8,<3.11"

# 最小版本要求，这种配置提供了灵活性，
# 让 requirements-*.txt 可以精确指定不同 Python 版本的最佳依赖版本。
dependencies = [
    "numpy>=1.19.5,<2.0",
    "pandas>=1.2.5",
    "matplotlib>=3.4.3",
    "seaborn>=0.11.2",
    "Pillow>=8.3.2",
    "pybind11>=2.6.0",
    "scipy>=1.6.3",
    "scikit-learn>=0.24.2",
    "fastcluster>=1.1.25",
    "joblib>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.5",
    "flake8>=3.9.2",
    "memory-profiler>=0.58.0"
]

[project.urls]
Homepage = "https://github.com/Liang-Team/Sequenzo"
Documentation = "https://sequenzo.yuqi-liang.tech"

[tool.setuptools]
packages = ["sequenzo"]
package-dir = {"" = "."}

[tool.setuptools.package-data]
"sequenzo.datasets" = ["country_CO2_emissions.csv", "country_income.csv"]

[tool.setuptools.dynamic]
version = {attr = "sequenzo.__version__"}