[build-system]
requires = [
    "setuptools>=64",
    "wheel>=0.40.0",
    "pybind11>=3.0.0",   # 3.0+ required for Python 3.14 C-API; backward compatible with 3.9–3.13
    "cython>=3.0.11",    # 3.0.x covers 3.9–3.13; pip resolves to 3.2.x (3.14 support) at runtime
    # Use NumPy 2.x for building to ensure ABI compatibility with runtime
    # NumPy 2.x is backward compatible with code written for NumPy 1.x
    "numpy>=1.21.0"
]
build-backend = "setuptools.build_meta"  # Use setuptools as the build backend

# dependencies 是运行时依赖，也就是用户 pip install sequenzo 时会自动装的内容
[project]
name = "sequenzo"
description = "A fast, scalable and intuitive Python package for social sequence analysis."
readme = "README.md"
authors = [
    { name = "Yuqi Liang", email = "yuqi.liang.1900@gmail.com" },
    { name = "Xinyi Li", email = "1836724126@qq.com" },
    { name = "Jan Heinrich Ernst Meyerhoff-Liang", email = "jan.meyerhoff1@gmail.com" }
]
license = { file = "LICENSE" }
requires-python = ">=3.9,<3.15"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
version = "0.1.38"
dependencies = [
    # Runtime numpy - using 2.x for ABI compatibility with built extensions
    # NumPy 2.x is backward compatible with code written for NumPy 1.x
    "numpy>=1.21.0",
    "pandas>=1.2.5",
    "matplotlib>=3.4.3",
    "seaborn>=0.11.2",
    "Pillow>=8.3.2",
    "pybind11>=3.0.0",   # 3.0+ required for Python 3.14; backward compatible with 3.9–3.13
    "cython>=3.0.11",    # 3.0.x for 3.9–3.13; pip auto-upgrades to 3.1+ (3.14 support) for 3.14 users
    # Avoid SciPy builds from source on manylinux2014 (OpenBLAS missing)
    "scipy>=1.6.3,<1.17",
    "scikit-learn>=0.24.2",
    "joblib>=1.0.1",
    "docutils>=0.17",
    "tqdm>=4.62.3,<5.0.0",
    "missingno>=0.5.2,<0.6.0",
    "cffi>=1.17.0",  # 1.17+ has Python 3.13 wheels; cffi 2.0 (auto-selected for 3.14) is backward compatible
    "hmmlearn>=0.2.0",  # Required for seqhmm module
    "boruta>=0.3",  # Required for feature_extraction_and_selection (BorutaPy)
    "statsmodels>=0.13.5,<0.14.0; python_version < '3.10'",  # Python 3.9: 0.14.x needs scipy>=1.8/pandas>=1.4 which conflicts
    "statsmodels>=0.14.6; python_version >= '3.10'",          # Align with requirements-3.10+ / avoid older 0.14.x edge cases
    "tomli>=1.1.0; python_version < '3.11'",                  # tomllib stdlib backport for Python 3.9/3.10
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.5",
    "flake8>=3.9.2"
]

[project.urls]
Homepage = "https://github.com/Liang-Team/Sequenzo"
Documentation = "https://sequenzo.yuqi-liang.tech"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"sequenzo.datasets" = ["*.csv"]
"sequenzo.dissimilarity_measures" = [
  "src/**/*.cpp",
  "src/**/*.h", 
  "src/**/*.hpp"
]
"sequenzo.clustering" = [
  "src/**/*.cpp",
  "src/**/*.h"
]
"sequenzo.clustering.sequenzo_fastcluster" = [
  "src/**/*.cpp",
  "src/**/*.h"
]
"sequenzo.utils.core_distance_operations" = [
  "src/**/*.cpp",
  "src/**/*.h"
]
# Note: .c files are auto-generated from .pyx during build via Cython


[tool.setuptools.packages.find]
# 这告诉 setuptools：sequenzo 包目录就直接在当前目录下（不是 sequenzo/sequenzo 里）
where = ["."]
include = ["sequenzo*"]

[tool.pybind11]
include = ["pybind11"]

[tool.pytest.ini_options]
norecursedirs = [
    ".git",
    ".venv",
    "build",
    "dist",
    "archive_test",
]
